netbox-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: netbox
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        project: netbox
    spec:
      containers:
      - name: redis
        image: redis
        resources: {}
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: netbox
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
