netbox-service.yml
apiVersion: v1
kind: Service
metadata:
  name: netbox
  namespace: netbox
spec:
  selector:
    app: netbox
  sessionAffinity: ClientIP
  externalIPs: 
    - 10.220.48.71
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: NodePort
