netbox-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netbox-networkpolicy
  namespace: netbox
spec:
  podSelector:
    matchLabels:
      project: netbox
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
